--- a/build.gradle
+++ b/build.gradle
@@ -24,4 +24,9 @@ dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.25.1'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.12.2'
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: '2.21.0'
+    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
