--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ jar {
 
 dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    compile group: 'com.eclipsesource.minimal-json', name: 'minimal-json', version: '0.9.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.25.1'
